--- a/_includes/_sidebar_cpython.html
+++ b/_includes/_sidebar_cpython.html
@@ -3,8 +3,8 @@
 		<h3>Sidebar</h3>
 		<p>
 			<b>Optimization with C:</b><br> Optimized Python code using Cython, numba, and C++ to improve performance of bottlenecks by 30%.<br>
-			<b>Parallel Computing:</b><br> Parallelized Python code using MPI and OpenMP to reduce computation time by 50% on a cluster.<br>
-			<b>Vectorization:</b> <br> Utilized numpy and pandas to vectorize operations.
+			<b>Parallel Computing:</b><br> Parallelised Python code using MPI to reduce computation time by 50% on a cluster.<br>
+			<b>Vectorization:</b> <br> Used numpy and pandas to vectorize operations.
 
 		</p>
 	</div>
