--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -87,7 +87,7 @@ format: frontpage
 {% if page.callforaction %}
     <div class="row t60 b60">
         <div class="small-12 text-center columns">
-            <a class="button large radius custom-button {{ page.callforaction.style }}" href="{{ url }}{{ page.callforaction.url }}"{% if page.callforaction.url contains 'http' %} target="_blank" {% endif %}>{{ page.callforaction.text }}</a>
+            <a class="button radius custom-button {{ page.callforaction.style }} small-button large-button" href="{{ url }}{{ page.callforaction.url }}"{% if page.callforaction.url contains 'http' %} target="_blank" {% endif %}>{{ page.callforaction.text }}</a>
         </div>
     </div>
 {% endif %}
